--- a/fonts/flaticon/font/flaticon.html
+++ b/fonts/flaticon/font/flaticon.html
@@ -150,13 +150,13 @@
     .demo ul li code .red {
         color: #EF3159;
     }
-    .demo ul li code .green {
+    .demo ul li code .lightgreen {
         color: #ACFF65;
     }
     .demo ul li code .yellow {
         color: #FFFF99;
     }
-    .demo ul li code .blue {
+    .demo ul li code .lightgreen {
         color: #99D3FF;
     }
     .demo ul li code .purple {
@@ -370,7 +370,7 @@
                 <code class="big">
                     &lt;<span class="red">head</span>&gt;
                     <br/><span class="dots">...</span>
-                    <br/>&lt;<span class="red">link</span> <span class="green">rel</span>=<span class="yellow">"stylesheet"</span> <span class="green">type</span>=<span class="yellow">"text/css"</span> <span class="green">href</span>=<span class="yellow">"your_website_domain/css_root/flaticon.css"</span>&gt;
+                    <br/>&lt;<span class="red">link</span> <span class="lightgreen">rel</span>=<span class="yellow">"stylesheet"</span> <span class="lightgreen">type</span>=<span class="yellow">"text/css"</span> <span class="lightgreen">href</span>=<span class="yellow">"your_website_domain/css_root/flaticon.css"</span>&gt;
                     <br/><span class="dots">...</span>
                     <br/>&lt;/<span class="red">head</span>&gt;
                 </code>
@@ -378,9 +378,9 @@
 
             <li>
                 <p>
-                    <span class="num">3</span>Use the icon class on <code>"<span class="blue">display</span>:<span class="purple"> inline</span>"</code> elements:
+                    <span class="num">3</span>Use the icon class on <code>"<span class="lightgreen">display</span>:<span class="purple"> inline</span>"</code> elements:
                     <br />
-                    Use example: <code>&lt;<span class="red">i</span> <span class="green">class</span>=<span class="yellow">&quot;flaticon-airplane49&quot;</span>&gt;&lt;/<span class="red">i</span>&gt;</code> or <code>&lt;<span class="red">span</span> <span class="green">class</span>=<span class="yellow">&quot;flaticon-airplane49&quot;</span>&gt;&lt;/<span class="red">span</span>&gt;</code>
+                    Use example: <code>&lt;<span class="red">i</span> <span class="lightgreen">class</span>=<span class="yellow">&quot;flaticon-airplane49&quot;</span>&gt;&lt;/<span class="red">i</span>&gt;</code> or <code>&lt;<span class="red">span</span> <span class="lightgreen">class</span>=<span class="yellow">&quot;flaticon-airplane49&quot;</span>&gt;&lt;/<span class="red">span</span>&gt;</code>
             </li>
         </ul>
 
