--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2021-2022</span>
-    					<h2>Art &amp; Shopify Developer</h2>
+    					<h2>Shopify Developer</h2>
     					<span class="position">Fiver</span>
 						<p class="mt-4">Dynamic and interactive user interfaces using front-end technologies like JavaScript, AJAX, and other frameworks, specifically within the context of Shopify stores.</p>
     				</div>
