--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 	    </div>
     </section>
 
-    <section class="ftco-about img ftco-section ftco-no-pb" id="about-section">
+    <!-- <section class="ftco-about img ftco-section ftco-no-pb" id="about-section">
     	<div class="container">
     		<div class="row d-flex">
     			<div class="col-md-6 col-lg-5 d-flex">
@@ -125,7 +125,7 @@
 	        </div>
         </div>
     	</div>
-    </section>
+    </section> -->
 
     <section class="ftco-section ftco-no-pb" id="resume-section">
     	<div class="container">
@@ -469,7 +469,7 @@
         </div>
       </div>
     </section>
-
+<!-- 
     <section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
     	<div class="container">
 				<div class="row d-md-flex align-items-center">
@@ -499,7 +499,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <section class="ftco-section ftco-hireme img margin-top" style="background-image: url(images/bg_1.jpg)">
 			<div class="container">
