--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
-	  
+	<video id="background-video" autoplay loop muted poster="https://assets.codepen.io/6093409/river.jpg">
+		<source src="/images/video2.mp4" type="video/mp4">
+	</video>
 	  
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 	    <div class="container">
