--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     	</div>
     </section>
 
-    <section class="ftco-section" id="services-section">
+    <!-- <section class="ftco-section" id="services-section">
     	<div class="container">
     		<div class="row justify-content-center py-5 mt-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
@@ -250,7 +250,7 @@
 					</div>
 				</div>
     	</div>
-    </section>
+    </section> -->
 
 		
 		<section class="ftco-section" id="skills-section">
@@ -407,7 +407,7 @@
     </section>
 
 
-    <section class="ftco-section" id="blog-section">
+    <!-- <section class="ftco-section" id="blog-section">
       <div class="container">
         <div class="row justify-content-center mb-5 pb-5">
           <div class="col-md-7 heading-section text-center ftco-animate">
@@ -470,7 +470,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 <!-- 
     <section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
     	<div class="container">
@@ -503,7 +503,7 @@
       </div>
     </section> -->
 
-    <section class="ftco-section ftco-hireme img margin-top" style="background-image: url(images/bg_1.jpg)">
+    <!-- <section class="ftco-section ftco-hireme img margin-top" style="background-image: url(images/bg_1.jpg)">
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-md-7 ftco-animate text-center">
@@ -513,7 +513,7 @@
 					</div>
 				</div>
 			</div>
-		</section>
+	</section> -->
 
     <section class="ftco-section contact-section ftco-no-pb" id="contact-section">
       <div class="container">
@@ -565,7 +565,7 @@
         </div>
 
 
-        <div class="row no-gutters block-9">
+        <div class="row no-gutters block-9" style="display: flex;">
           <div class="col-md-6 order-md-last d-flex">
             <form action="#" class="bg-light p-4 p-md-5 contact-form">
               <div class="form-group">
@@ -588,7 +588,11 @@
           </div>
 
           <div class="col-md-6 d-flex">
-          	<div class="img" style="background-image: url(images/bg_1.png);"></div>
+          	<div class="img" style="width: 10%;">
+				<video class="img23" autoplay loop muted poster="https://assets.codepen.io/6093409/river.jpg">
+					<source src="/images/video.mp4" type="video/mp4">
+				</video>
+			</div>
           </div>
         </div>
       </div>
