--- a/index.html
+++ b/index.html
@@ -339,48 +339,58 @@
     		<div class="row justify-content-center pb-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Projects</h1>
-            <h2 class="mb-4">Our Projects</h2>
+            <h2 class="mb-4">My Projects</h2>
             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
           </div>
         </div>
     		<div class="row">
     			<div class="col-md-4">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-4.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project_1.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
+	    					<h3><a href="https://e-commerce-client-beryl.vercel.app/">FashionFinds</a></h3>
 	    					<span>Web Design</span>
+							<br>
+							<span><a style="color: black;" href="https://github.com/MujtabaRaza1/E-Commerce-user">Github Repo</a></span>
 	    				</div>
     				</div>
   				</div>
   				<div class="col-md-8">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-5.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project_5.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
+	    					<h3><a href="https://genius-pro-iota.vercel.app/dashboard">Genius</a></h3>
 	    					<span>Web Design</span>
+							<br>
+	    					<span><a style="color: black;" href="https://github.com/MujtabaRaza1/Genius">Github Repo</a></span>
 	    				</div>
     				</div>
   				</div>
 
     			<div class="col-md-8">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-1.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project_3.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
+	    					<h3><a href="https://movieland-123.netlify.app/">Movie Land</a></h3>
 	    					<span>Web Design</span>
-	    				</div>
-    				</div>
-
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-6.jpg);">
-    					<div class="overlay"></div>
-	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-	    					<span>Web Design</span>
+							<br>
+							<span><a style="color: black;" href="https://github.com/MujtabaRaza1/Movie-land-TestRE">Github Repo</a></span>
 	    				</div>
     				</div>
     			</div>
-    			<div class="col-md-4">
+				<div class="col-md-4">
+					<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project_4.png);">
+						<div class="overlay"></div>
+						<div class="text text-center p-4">
+							<h3><a href="https://e-commerce-admin-alpha.vercel.app/">E-Commerce CMS</a></h3>
+							<span>Web Design</span>
+							<br>
+							<span><a style="color: black;" href="https://github.com/MujtabaRaza1/E-Commerce-Dashboard">Github Repo</a></span>
+						</div>
+					</div>
+				</div>
+				
+    			<!-- <div class="col-md-4">
     				<div class="row">
     					<div class="col-md-12">
 		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-2.jpg);">
@@ -401,7 +411,7 @@
 		    				</div>
 	    				</div>
     				</div>
-    			</div>
+    			</div> -->
     		</div>
     	</div>
     </section>
