--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
 	    					<h3><a href="https://e-commerce-client-beryl.vercel.app/">FashionFinds</a></h3>
-	    					<span>Web Design</span>
+	    					<span style="text-decoration: underline;">Web Design</span>
 							<br>
 							<span><a style="color: black;" href="https://github.com/MujtabaRaza1/E-Commerce-user">Github Repo</a></span>
 	    				</div>
@@ -360,7 +360,7 @@
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
 	    					<h3><a href="https://genius-pro-iota.vercel.app/dashboard">Genius</a></h3>
-	    					<span>Web Design</span>
+	    					<span style="text-decoration: underline;">Web Design</span>
 							<br>
 	    					<span><a style="color: black;" href="https://github.com/MujtabaRaza1/Genius">Github Repo</a></span>
 	    				</div>
@@ -372,7 +372,7 @@
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
 	    					<h3><a href="https://movieland-123.netlify.app/">Movie Land</a></h3>
-	    					<span>Web Design</span>
+	    					<span style="text-decoration: underline;">Web Design</span>
 							<br>
 							<span><a style="color: black;" href="https://github.com/MujtabaRaza1/Movie-land-TestRE">Github Repo</a></span>
 	    				</div>
@@ -383,7 +383,7 @@
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
 							<h3><a href="https://e-commerce-admin-alpha.vercel.app/">E-Commerce CMS</a></h3>
-							<span>Web Design</span>
+							<span style="text-decoration: underline;">Web Design</span>
 							<br>
 							<span><a style="color: black;" href="https://github.com/MujtabaRaza1/E-Commerce-Dashboard">Github Repo</a></span>
 						</div>
