--- a/index.html
+++ b/index.html
@@ -348,8 +348,8 @@
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project_1.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="https://e-commerce-client-beryl.vercel.app/">FashionFinds</a></h3>
-	    					<span style="text-decoration: underline;">Web Design</span>
+	    					<h3><a href="https://e-commerce-client-beryl.vercel.app/" style="text-decoration: underline;">FashionFinds</a></h3>
+	    					<span>Web Design</span>
 							<br>
 							<span><a style="color: black;" href="https://github.com/MujtabaRaza1/E-Commerce-user">Github Repo</a></span>
 	    				</div>
@@ -359,8 +359,8 @@
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project_5.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="https://genius-pro-iota.vercel.app/dashboard">Genius</a></h3>
-	    					<span style="text-decoration: underline;">Web Design</span>
+	    					<h3><a href="https://genius-pro-iota.vercel.app/dashboard" style="text-decoration: underline;">Genius</a></h3>
+	    					<span>Web Design</span>
 							<br>
 	    					<span><a style="color: black;" href="https://github.com/MujtabaRaza1/Genius">Github Repo</a></span>
 	    				</div>
@@ -371,8 +371,8 @@
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project_3.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="https://movieland-123.netlify.app/">Movie Land</a></h3>
-	    					<span style="text-decoration: underline;">Web Design</span>
+	    					<h3><a href="https://movieland-123.netlify.app/" style="text-decoration: underline;">Movie Land</a></h3>
+	    					<span>Web Design</span>
 							<br>
 							<span><a style="color: black;" href="https://github.com/MujtabaRaza1/Movie-land-TestRE">Github Repo</a></span>
 	    				</div>
@@ -382,8 +382,8 @@
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project_4.png);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="https://e-commerce-admin-alpha.vercel.app/">E-Commerce CMS</a></h3>
-							<span style="text-decoration: underline;">Web Design</span>
+							<h3><a href="https://e-commerce-admin-alpha.vercel.app/" style="text-decoration: underline;">E-Commerce CMS</a></h3>
+							<span>Web Design</span>
 							<br>
 							<span><a style="color: black;" href="https://github.com/MujtabaRaza1/E-Commerce-Dashboard">Github Repo</a></span>
 						</div>
