--- a/index.html
+++ b/index.html
@@ -158,13 +158,13 @@
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2021-2022</span>
     					<h2>Shopify Developer</h2>
-    					<span class="position">Fiver</span>
+    					<span class="position">MetaDots.</span>
 						<p class="mt-4">Dynamic and interactive user interfaces using front-end technologies like JavaScript, AJAX, and other frameworks, specifically within the context of Shopify stores.</p>
     				</div>
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2020-2021</span>
-    					<h2>Wordpress Developer</h2>
-    					<span class="position">Fiver</span>
+    					<h2>Wordpress | Shopify Developer</h2>
+    					<span class="position">Fiver | Freelancing</span>
 						<p class="mt-4">Creating a seamless user experience across various devices by implementing responsive design principles.</p>
 					</div>
     			</div>
