--- a/index.html
+++ b/index.html
@@ -621,6 +621,7 @@
 				<li class="ftco-animate"><a href="https://www.linkedin.com/in/muhammad-mujtaba-raza-ii0786ii0/"><span class="icon-linkedin"></span></a></li>
                 <li class="ftco-animate"><a href="https://www.facebook.com/zillaspear/"><span class="icon-facebook"></span></a></li>
                 <li class="ftco-animate"><a href="https://www.instagram.com/zillaspear/"><span class="icon-instagram"></span></a></li>
+                <li class="ftco-animate"><a href="https://github.com/MujtabaRaza1"><span class="icon-github"></span></a></li>
               </ul>
             </div>
           </div>
