Enhance heading styles in index.html by adding 'width: min-content' to improve layout consistency for sections: Resume, Skills, and Projects.

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     	<div class="container">
     		<div class="row justify-content-center pb-5">
           <div class="col-md-10 heading-section text-center ftco-animate">
-          	<h1 class="big big-2" style="left: 50%; transform: translateX(-50%); text-align: center;">Resume</h1>
+          	<h1 class="big big-2" style="left: 50%; transform: translateX(-50%); text-align: center; width: min-content;">Resume</h1>
             <h2 class="mb-4">Resume</h2>
             <p>As a Full Stack Developer. I specialize in automation engineering CRM Tools, Cross Platform Integrations, Shopify Plus development, and modern web technologies that drive enterprise e-commerce growth.</p>
           </div>
@@ -268,7 +268,7 @@
 			<div class="container">
 				<div class="row justify-content-center pb-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
-          	<h1 class="big big-2" style="left: 50%; transform: translateX(-50%); text-align: center;">Skills</h1>
+          	<h1 class="big big-2" style="left: 50%; transform: translateX(-50%); text-align: center; width: min-content;">Skills</h1>
             <h2 class="mb-4">My Skills</h2>
             <p>As a Full Stack Developer. I specialize in automation, CRM Tools, Shopify development, and modern web technologies that drive business growth.</p>
           </div>
@@ -415,7 +415,7 @@
     	<div class="container">
     		<div class="row justify-content-center pb-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
-          	<h1 class="big big-2" style="left: 50%; transform: translateX(-50%); text-align: center;">Projects</h1>
+          	<h1 class="big big-2" style="left: 50%; transform: translateX(-50%); text-align: center; width: min-content;">Projects</h1>
             <h2 class="mb-4">My Projects & Work</h2>
             <p style="text-align: left;">A showcase of my technical expertise through personal projects and professional achievements. While I cannot publicly display proprietary client work, these projects demonstrate my proficiency in full-stack development, e-commerce solutions, and modern web technologies.</p>
           </div>
