--- a/single.html
+++ b/single.html
@@ -297,7 +297,7 @@
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">About</h2>
-              <p>Software Engineer | Shopify | Frontend Developer</p>
+              <p>Software Engineer | Automations | CRMs | Shopify | Frontend Developer</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="https://twitter.com/TheCoopLowski"><span class="icon-twitter"></span></a></li>
 				<li class="ftco-animate"><a href="https://www.linkedin.com/in/muhammad-mujtaba-raza-ii0786ii0/"><span class="icon-linkedin"></span></a></li>
